Eclipse 2019-09 General and Git Improvements: sources, features to show